# frieze

./: Cargo.toml  README.md
node/: app.js
node/public/: T.csv  TG.csv  THG.csv  TR.csv  TRHVG.csv  TRVG.csv  TV.csv  index.html
src/: array2d.rs  frieze.rs  lib.rs
